@@ -5,6 +5,7 @@ Revision history for Perl extension Wx.
 	  (patch by Klaas Hartmann).
 	- Added wxCollapsiblePane and wxBitmapComboBox (2.7).
 	- Added wxAnimation and wxAnimationCtrl (2.7).
+	- Added wxPasswordEntryDialog (2.6).
 
 0.76  Thu Aug 16 00:21:00 CEST 2007
 	- Added wxEditableListBox (2.9).
